# my-theengs-bridge

./: .gitmodules  build.gradle  settings.gradle
.github/workflows/: build.yaml  build2.yaml  build3.yaml  build4.yaml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/theengsbg/: BgService.java  TheengsJni.java
